Fix hyperlinks on nav and services top text content spacing

--- a/css/index.css
+++ b/css/index.css
@@ -827,12 +827,14 @@ footer .top-info .address h3 {
   line-height: 24px;
   color: #ffffff;
   margin-bottom: 20px;
+  font-weight: bold;
 }
 footer .top-info .address P {
   font-weight: regular;
   font-size: 14px;
   line-height: 26px;
   color: #ffffff;
+  font-weight: lighter;
 }
 footer .copyright {
   display: flex;
@@ -857,17 +859,26 @@ footer .copyright {
   color: #222222;
   font-weight: regular;
   display: flex;
+  justify-content: center;
+  margin: 20px 10px;
 }
 .main-content-svc .top-content-svc .text-content-svc p {
-  padding: 50px;
-  margin: 50px 0;
-  width: 100%;
+  margin: 10px;
+  width: 95%;
   text-align: justify;
+  margin-bottom: 20px;
+  line-height: 38px;
+  font-size: 20px;
+}
+.main-content-svc .tabnav-content {
+  display: flex;
+  justify-content: center;
+  margin-left: 20px;
 }
 .main-content-svc .tabnav-content .tabs .tab-links {
   display: flex;
   justify-content: space-between;
-  margin: 20px 30px;
+  margin: 0 15px;
 }
 .main-content-svc .tabnav-content .tabs .tab-links .tab-link {
   border: 2px solid #222222;
@@ -898,11 +909,13 @@ footer .copyright {
   width: 45%;
 }
 .main-content-svc .tabnav-content .tabs .tab-items .tab-item .text-content h3 {
-  font-size: 28px;
+  font-size: 32px;
   font-weight: bold;
 }
 .main-content-svc .tabnav-content .tabs .tab-items .tab-item .text-content p {
   padding: 10px 0;
+  margin-top: 10px;
+  font-size: 20px;
 }
 .main-content-svc .tabnav-content .tabs .tab-items .hide {
   display: none;
