--- a/less/footer.less
+++ b/less/footer.less
@@ -56,10 +56,12 @@ footer {
 			h3 {
 				.footer-heading();
 				margin-bottom: 20px;
+				font-weight: bold;
 			}
 
 			P {
 				.footer-text();
+				font-weight: lighter;
 			}
 		}
 	}
