--- a/less/mixins.less
+++ b/less/mixins.less
@@ -15,7 +15,7 @@
 }
 
 .footer-text {
-	font-weight: @footer-txt-fw;
+	font-weight: @regular;
 	font-size: @footer-txt-fs;
 	line-height: @footer-txt-lh;
 	color: @footer-txt-color;
