--- a/less/services.less
+++ b/less/services.less
@@ -8,12 +8,18 @@
             color: @muted-black;
             font-weight: @regular;
             display: flex;
+            justify-content: center;
+            margin: 20px 10px;
 
             p {
-                padding: 50px;
-                margin: 50px 0;
-                width: 100%;
+    
+                margin: 10px;
+                width: 95%;
                 text-align: justify;
+                margin-bottom: 20px;
+                line-height: 38px;
+                font-size: 20px;
+
             }
         
 
@@ -22,11 +28,15 @@
     }
 
     .tabnav-content {
+        
+        display: flex;
+        justify-content: center;
+        margin-left: 20px;
             .tabs {
                 .tab-links {
                     display: flex;
                     justify-content: space-between;
-                    margin: 20px 30px;
+                    margin: 0 15px;
                     .tab-link {
                         border: 2px solid @muted-black;
                         width: 200px;
@@ -67,12 +77,14 @@
                     .text-content {
                         width: 45%;
                         h3 {
-                            font-size: 28px;
+                            font-size: 32px;
                             font-weight: bold;
                             
                         }
                         p{
                             padding: 10px 0;
+                            margin-top: 10px;
+                            font-size: 20px;
 
                         }
                     }
